--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </div>
 
     <div class="imgs_container width-50 padding-20 flex center-flex-xy">
-      <img id="dynamic_image" class="border-radius-20" src="./images/10.JPG" alt="imágen en base al último elemento clickeado">
+      <img id="dynamic_image" style="width: -webkit-fill-available;" class="border-radius-20" src="./images/10.JPG" alt="imágen en base al último elemento clickeado">
     </div>
 
   </div>
