faltas de ortografia

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Arquitectura física del ZilogZ80</title>
+  <title>Arquitectura física del Zilog Z80</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
       <details>
         <summary>
           <span class="faq-title">
-            CPU y Señales de Sitema de control
+            CPU y Señales de Sistema de control
           </span>
           <img src="assets/plus.svg" class="expand-icon" alt="Plus">
         </summary>
@@ -37,7 +37,7 @@
       <details>
         <summary>
           <span class="faq-title">
-            Regidtros de instrucciones
+            Registros de instrucciones
           </span>
           <img src="assets/plus.svg" class="expand-icon" alt="Plus">
         </summary>
@@ -63,7 +63,7 @@
           <span class="faq-title">Bus de control de datos</span>
           <img src="assets/plus.svg" class="expand-icon" alt="Plus">
         </summary>
-        <div class="faq-content">YEste bloque controla el flujo de datos en el bus de datos interno y externo. Asegura
+        <div class="faq-content">Este bloque controla el flujo de datos en el bus de datos interno y externo. Asegura
           que los datos se muevan correctamente entre el CPU y otros dispositivos conectados, como la memoria o los
           periféricos.</div>
       </details>
@@ -75,7 +75,7 @@
         </summary>
         <div class="faq-content"> La ALU es responsable de realizar operaciones aritméticas (como sumas y restas) y
           lógicas (como AND, OR, NOT). Es una parte crucial del CPU donde se llevan a cabo la mayoría de las operaciones
-          de procesamiento de datos..</div>
+          de procesamiento de datos.</div>
       </details>
 
       <details>
@@ -132,12 +132,10 @@
     </div>
 
     <div class="imgs_container width-50 padding-20 flex center-flex-xy">
-      <img id="dynamic_image" style="width: -webkit-fill-available;" class="border-radius-20" src="./images/10.JPG" alt="imágen en base al último elemento clickeado">
+      <img id="dynamic_image" style="width: -webkit-fill-available;" class="border-radius-20" src="./images/10.JPG" alt="imagen en base al último elemento clickeado">
     </div>
 
   </div>
-
-
 
   <script src="./js/script.js"></script>
 </body>
